word wrap fix for Chrome

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -55,8 +55,10 @@
   }
 }
 
-.site-content {
-  @include make-row();
+
+.site-content { 
+  @include make-row();  
+  word-break: break-word; 
 
   .content-area {
     @include make-md-column(9);
